--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "loglevel": "^1.6.1",
     "multer": "^1.4.1"
   },
   "devDependencies": {},
