--- a/webpage/package.json
+++ b/webpage/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "ajv": "^6.8.1",
+    "ajv": "^6.10.0",
     "antd": "^3.16.1",
+    "mobx": "^5.9.4",
+    "mobx-react": "^5.4.3",
+    "moment": "^2.24.0",
     "react": "^16.8.1",
     "react-calendar-heatmap": "^1.8.0",
     "react-dom": "^16.8.1",
     "react-scripts": "^2.1.8",
-    "recharts": "^1.4.2"
+    "recharts": "^1.4.2",
+    "typescript": "^3.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
