--- a/webpage/package.json
+++ b/webpage/package.json
@@ -11,6 +11,7 @@
     "react": "^16.8.1",
     "react-calendar-heatmap": "^1.8.0",
     "react-dom": "^16.8.1",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "^2.1.8",
     "recharts": "^1.4.2",
     "typescript": "^3.4.2"
