--- a/webpage/package.json
+++ b/webpage/package.json
@@ -5,11 +5,11 @@
   "dependencies": {
     "ajv": "^6.10.0",
     "antd": "^3.16.1",
-    "d3": "^5.9.2",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
     "moment": "^2.24.0",
     "react": "^16.8.1",
+    "react-calendar": "^2.18.1",
     "react-calendar-heatmap": "^1.8.0",
     "react-dom": "^16.8.1",
     "react-router-dom": "^5.0.0",
