--- a/webpage/package.json
+++ b/webpage/package.json
@@ -8,6 +8,7 @@
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
     "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
     "react": "^16.8.1",
     "react-calendar": "^2.18.1",
     "react-calendar-heatmap": "^1.8.0",
@@ -18,7 +19,8 @@
     "typescript": "^3.4.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start && watch-css",
+    "watch-css": "node-sass --watch src/styles/*.scss --recursive --output src/styles/css",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
