--- a/web-page/package.json
+++ b/web-page/package.json
@@ -7,9 +7,20 @@
     "@types/node": "^12.7.2",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.8.5",
+    "@types/react-router-dom": "^4.3.4",
+    "ajv": "^6.10.2",
+    "antd": "^3.22.0",
+    "mobx": "^5.13.0",
+    "mobx-react": "^6.1.3",
+    "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
     "react": "^16.9.0",
+    "react-calendar": "^2.19.1",
+    "react-calendar-heatmap": "^1.8.1",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "^3.1.1",
+    "recharts": "^1.7.1",
     "typescript": "^3.5.3"
   },
   "devDependencies": {},
