--- a/web-page/package.json
+++ b/web-page/package.json
@@ -6,8 +6,10 @@
     "@types/jest": "^24.0.17",
     "@types/node": "^12.7.2",
     "@types/react": "^16.9.2",
+    "@types/react-calendar-heatmap": "^1.6.2",
     "@types/react-dom": "^16.8.5",
     "@types/react-router-dom": "^4.3.4",
+    "@types/recharts": "^1.1.20",
     "ajv": "^6.10.2",
     "antd": "^3.22.0",
     "mobx": "^5.13.0",
