--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "@google-cloud/datastore": "^2.0.0",
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
