--- a/web-page/package.json
+++ b/web-page/package.json
@@ -12,6 +12,7 @@
     "@types/recharts": "^1.1.20",
     "ajv": "^6.10.2",
     "antd": "^3.22.0",
+    "axios": "^0.19.0",
     "mobx": "^5.13.0",
     "mobx-react": "^6.1.3",
     "moment": "^2.24.0",
@@ -43,5 +44,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:4000/"
 }
