--- a/web-page/package.json
+++ b/web-page/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "dependencies": {
     "@types/jest": "^24.0.17",
-    "@types/node": "^12.7.2",
     "@types/react": "^16.9.2",
     "@types/react-calendar-heatmap": "^1.6.2",
     "@types/react-dom": "^16.8.5",
     "@types/react-router-dom": "^4.3.4",
     "@types/recharts": "^1.1.20",
+    "@types/regression": "^2.0.0",
     "ajv": "^6.10.2",
     "antd": "^3.22.0",
     "axios": "^0.19.0",
@@ -24,7 +24,9 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.1.1",
     "react-spinners": "^0.6.1",
+    "react-vis": "^1.11.7",
     "recharts": "^1.7.1",
+    "regression": "^2.0.1",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1",
