--- a/web-page/package.json
+++ b/web-page/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/heap": "^0.2.28",
     "@types/jest": "^24.9.1",
     "@types/react": "^16.9.19",
     "@types/react-calendar-heatmap": "^1.6.2",
@@ -13,6 +14,7 @@
     "ajv": "^6.11.0",
     "antd": "^3.26.9",
     "axios": "^0.19.2",
+    "heap": "^0.2.6",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.7",
     "moment": "^2.24.0",
@@ -21,6 +23,7 @@
     "react-calendar": "^2.19.2",
     "react-calendar-heatmap": "^1.8.1",
     "react-dom": "^16.12.0",
+    "react-minimal-pie-chart": "^6.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.1",
     "react-spinners": "^0.6.1",
