--- a/web-page/package.json
+++ b/web-page/package.json
@@ -15,6 +15,7 @@
     "antd": "^3.26.9",
     "axios": "^0.19.2",
     "heap": "^0.2.6",
+    "minimist": "^1.2.5",
     "mobx": "^5.15.4",
     "mobx-react": "^6.1.7",
     "moment": "^2.24.0",
@@ -25,7 +26,7 @@
     "react-dom": "^16.12.0",
     "react-minimal-pie-chart": "^6.0.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.1",
+    "react-scripts": "^3.4.1",
     "react-spinners": "^0.6.1",
     "react-vis": "^1.11.7",
     "recharts": "^1.8.5",
