--- a/web-page/.vscode/settings.json
+++ b/web-page/.vscode/settings.json
@@ -4,5 +4,6 @@
     "prettier.jsxSingleQuote": true,
     "[typescriptreact]": {
         "editor.formatOnSave": true
-    }
+    },
+    "git.ignoreLimitWarning": true
 }
