--- a/web-page/package.json
+++ b/web-page/package.json
@@ -3,17 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.0.6",
     "@types/heap": "^0.2.28",
     "@types/jest": "^24.9.1",
+    "@types/lodash": "^4.14.149",
     "@types/react": "^16.9.19",
     "@types/react-calendar-heatmap": "^1.6.2",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^4.3.5",
+    "@types/react-tagsinput": "^3.19.7",
     "@types/recharts": "^1.8.5",
     "@types/regression": "^2.0.0",
     "ajv": "^6.11.0",
-    "antd": "^3.26.9",
+    "antd": "^4.1.2",
     "axios": "^0.19.2",
+    "circular-dependency-plugin": "^5.2.0",
     "heap": "^0.2.6",
     "minimist": "^1.2.5",
     "mobx": "^5.15.4",
@@ -28,6 +32,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "react-spinners": "^0.6.1",
+    "react-tagsinput": "^3.19.0",
     "react-vis": "^1.11.7",
     "recharts": "^1.8.5",
     "regression": "^2.0.1",
@@ -35,9 +40,10 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1",
     "tslint-react": "^4.2.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
     "prettier": "^1.19.1"
   },
   "scripts": {
