--- a/web-page/.vscode/settings.json
+++ b/web-page/.vscode/settings.json
@@ -5,5 +5,6 @@
     "[typescriptreact]": {
         "editor.formatOnSave": true
     },
-    "git.ignoreLimitWarning": true
+    "git.ignoreLimitWarning": true,
+    "typescript.tsdk": "node_modules/typescript/lib"
 }
