--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
     "@babel/node": "^7.8.7",
-    "@babel/preset-env": "^7.9.5"
+    "@babel/preset-env": "^7.9.5",
+    "@types/express": "^4.17.6",
+    "eslint": "^6.8.0",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node server.js"
+    "start": "tsc && nodemon --exec babel-node dist/server.js"
   },
   "repository": {
     "type": "git",
