change everything to async await

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "strictNullChecks": false,
   },
   "include": [
-    "src/*.ts"
+    "src/**/*.ts",
   ],
   "rootDir": "src",
   "exclude": [
