--- a/package.json
+++ b/package.json
@@ -20,16 +20,19 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
     "@babel/node": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-typescript": "^7.9.0",
     "@types/express": "^4.17.6",
     "@types/multer": "^1.4.2",
     "eslint": "^6.8.0",
     "jest": "^25.3.0",
+    "jest-date-mock": "^1.0.8",
     "typescript": "^3.8.3"
   },
   "scripts": {
     "test": "jest server/*",
+    "jest": "jest",
     "test:watch": "jest server/* --watch",
     "start": "tsc && nodemon --exec babel-node dist/server.js",
     "build": "rm -rf dist && tsc",
@@ -55,5 +58,8 @@
       "browser": true,
       "node": true
     }
+  },
+  "jest": {
+    "setupFiles": ["jest-date-mock"]
   }
 }
