--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "express": "^4.17.1",
     "multer": "^1.4.2",
     "nodemon": "^1.19.1"
@@ -26,8 +28,12 @@
     "@types/express": "^4.17.6",
     "@types/multer": "^1.4.2",
     "eslint": "^6.8.0",
+    "import-sort-style-eslint": "^6.0.0",
+    "import-sort-style-module": "^6.0.0",
     "jest": "^25.3.0",
     "jest-date-mock": "^1.0.8",
+    "prettier": "^2.0.5",
+    "prettier-plugin-import-sort": "0.0.4",
     "typescript": "^3.8.3"
   },
   "scripts": {
@@ -35,6 +41,8 @@
     "lint": "eslint src/**/*.ts",
     "lintfix": "eslint src/**/*.ts --fix",
     "test:watch": "jest server/* --watch",
+    "prettier": "prettier --check src/**/*.ts",
+    "prettify": "prettier --write src/**/*.ts",
     "start": "tsc && nodemon --exec babel-node dist/server.js",
     "build": "rm -rf dist && tsc",
     "debug": "tsc && nodemon --inspect dist/server.js"
@@ -61,6 +69,14 @@
     }
   },
   "jest": {
-    "setupFiles": ["jest-date-mock"]
+    "setupFiles": [
+      "jest-date-mock"
+    ]
+  },
+  "importSort": {
+    ".js, .jsx, .ts, .tsx": {
+      "style": "eslint",
+      "parser": "typescript"
+    }
   }
 }
