add dist config

--- a/package.json
+++ b/package.json
@@ -71,6 +71,9 @@
   "jest": {
     "setupFiles": [
       "jest-date-mock"
+    ],
+    "testPathIgnorePatterns": [
+      "dist"
     ]
   },
   "importSort": {
