--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "express": "^4.17.1",
+    "moment": "^2.26.0",
     "multer": "^1.4.2",
     "nodemon": "^1.19.1"
   },
