--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "@typescript-eslint/parser": "^2.28.0",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
+    "csv-reader": "^1.0.6",
     "dotenv": "^8.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.7-alpha.3",
     "moment": "^2.26.0",
-    "multer": "^1.4.2",
     "nodemon": "^1.19.1"
   },
   "devDependencies": {
@@ -27,7 +28,7 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-typescript": "^7.9.0",
     "@types/express": "^4.17.6",
-    "@types/multer": "^1.4.2",
+    "@types/express-fileupload": "^1.1.3",
     "eslint": "^6.8.0",
     "import-sort-style-eslint": "^6.0.0",
     "import-sort-style-module": "^6.0.0",
